Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <h1>Onename Support</h1>
         <p>Frequently Asked Questions (FAQs)</p>
 
-        <p class="view"><a href="https://github.com/onenameio/website-faq">View the Project on GitHub <small>onenameio/website-faq</small></a></p>
+        <p class="view"><a href="https://github.com/onenameio/support">View the Project on GitHub <small>onenameio/support</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/onenameio/website-faq/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/onenameio/website-faq/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/onenameio/website-faq">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/onenameio/support/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/onenameio/support/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/onenameio/support">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
