Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 <ul>
 <li><a href="#address_1">How does the automatically generated Bitcoin address work?</a></li>
+<li><a href="#address_2">Who has my private key?</a></li>
 </ul>
 
 <p>Verifications: </p>
@@ -100,6 +101,12 @@
 <a name="address_1"></a>Q: How does the automatically generated Bitcoin address work?</h4>
 
 <p>If you do not provide a Bitcoin address during registration, Onename will generate one for you. The private key of this Bitcoin address is saved on our servers encrypted with your password (we do <em>not</em> have access to the private key). The private key is also stored in the backup file that you saved on Dropbox/Gdrive.</p>
+
+<h4>
+<a name="q-who-has-my-private-key" class="anchor" href="#q-who-has-my-private-key"><span class="octicon octicon-link"></span></a>
+<a name="address_2"></a>Q: Who has my private key?</h4>
+
+<p>Only you have access to your private key. Onename encypts your private key with the password that you provided and keeps the encrypted copy on our servers. If you forget your password then you can use the backup file you saved during signup to recover the private key. </p>
 
 <h2>
 <a name="verifications" class="anchor" href="#verifications"><span class="octicon octicon-link"></span></a>Verifications.</h2>
